# Rustic_SAT_Solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data.hpp  solver.cpp  solver.hpp
tests/: CMakeLists.txt  usage.cpp
